# KTools

./: .gitattributes  .gitignore  LICENSE  README.md  build.gradle.kts  deps.txt  gradle.properties  settings.gradle.kts
.github/workflows/: android-ci.yml
annotations/: build.gradle.kts
aop/: build.gradle
aop/src/main/: AndroidManifest.xml
app/: .gitignore  CMakeLists.txt  build.gradle.kts  proguard-rules.pro  trace-method-config.properties
app/src/main/: AndroidManifest.xml
app/src/main/assets/: zhifubao.js
app/src/main/assets/json/: demo.json
app/src/main/assets/web/: demo_img.html  inject.js
app/src/main/assets/weex/: hello.js  index.js
app/src/main/assets/xml/: demo.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/proto/: app_info.proto
app/src/main/res/anim/: anim_activity_center_in.xml  anim_activity_center_out.xml
app/src/main/res/animator/: animator_rotation_vector_triangle.xml  card_flip_left_in.xml  card_flip_left_out.xml  card_flip_right_in.xml
app/src/main/res/drawable/: anim_vector_triangle.xml  ic_jetpack.xml  ic_juejin.xml  selector_round_corner_button.xml  shape_round_corner_button.xml  vector_battery_charging.xml  vector_triangle.xml
app/src/main/res/layout/: activity_app_widget_config.xml  activity_big_image.xml  activity_bottom_navigation.xml  activity_bubble.xml  activity_content.xml  activity_coordinator.xml  activity_crash_info.xml  activity_device.xml  activity_fab.xml  activity_file_system.xml  activity_io.xml  (+25 more)
audio/: build.gradle.kts
audio/src/main/: AndroidManifest.xml
bluetooth/src/main/: AndroidManifest.xml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: Deps.kt  Exts.kt  Versions.kt
compiler/: Compiler_README.md  build.gradle.kts
container/: build.gradle.kts
container/src/main/: AndroidManifest.xml
design/: build.gradle.kts
design/src/main/: AndroidManifest.xml
design/src/main/assets/: china.json
flutter_module/: .gitignore  .metadata  pubspec.yaml
gradle/wrapper/: gradle-wrapper.properties
hack/: build.gradle.kts
hybrid/: build.gradle.kts
hybrid/src/main/: AndroidManifest.xml
image/: build.gradle.kts
image/src/main/: AndroidManifest.xml
kanimation/: build.gradle.kts
kanimation/src/main/: AndroidManifest.xml
kdownloader/: build.gradle.kts
kdownloader/src/main/: AndroidManifest.xml
klint/: build.gradle.kts
media/: build.gradle.kts
media/src/main/: AndroidManifest.xml
ndk/: .gitignore  build.gradle.kts
ndk/src/main/: AndroidManifest.xml
ndk/src/main/cpp/: CMakeLists.txt  ktools.cpp  skia_demo.cpp  skia_viewer.cpp  utils.cpp
ndk/src/main/cpp/include/arm64-v8a/: skia_demo.h  skia_viewer.h  utils.h
nfc/src/main/: AndroidManifest.xml
plugins/: aop.gradle  file.gradle  quality.gradle  script.gradle  sign.gradle
quality/checkstyle/: checkstyle.xml
quality/lint/: lint.xml
sensor/: build.gradle.kts
sensor/src/main/: AndroidManifest.xml
shell/: appInfo.sh  clearData.sh  dumpCurrentActivity.sh
storage/: build.gradle.kts
storage/src/main/: AndroidManifest.xml
tools/: build.gradle.kts  proguard-rules.pro
tools/src/main/: AndroidManifest.xml
video/: build.gradle.kts
video/src/main/: AndroidManifest.xml
vpn/: build.gradle.kts
vpn/src/main/: AndroidManifest.xml
widget/: build.gradle.kts
widget/src/main/: AndroidManifest.xml
(+372 files in other folders)
